fix: create parameter modal alignment editor field

--- a/src/components/GeoPointInput/GeoPointInput.scss
+++ b/src/components/GeoPointInput/GeoPointInput.scss
@@ -9,7 +9,7 @@
 
 .geopoint {
   width: 100%;
-  background: $inputBackgroundColor;
+  // background: $inputBackgroundColor;
   height: 80px;
 }
 
